# Google-Cloud-Hackathon-19

./: .env  .env.example  .gitignore  PROGRESS.md  README.md  bugs.md  gemini-3.1-review-notes.md  plan.md  pyproject.toml  skills-lock.json  test_all_buttons.py
.claude/: launch.json
UI-mockups/student_learning_dashboard/: code.html
UI-mockups/user_profile_interests_setup/: code.html
ai_tutor_chat_interface/: code.html
backend/: .env.example  README.md  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py
backend/app/agents/: assessment_agent.py  curriculum_agent.py  quiz_agent.py
backend/app/models/: curriculum.py  quiz.py  user.py
backend/app/routers/: assessment.py  curriculum.py  profile.py  quiz.py
backend/app/schemas/: curriculum.py  (+2 more)
conductor/: ui-plan.md
interactive_knowledge_quiz/: code.html
learning_module_resources/: code.html
personalized_curriculum_roadmap/: code.html
quiz_results_feedback/: code.html
setup/: create_template.py  test_template.py
specs/: 01-user-profile-and-assessment.md  02-curriculum-generation-and-content.md  03-quiz-and-adaptive-progression.md  _template.md
src/: app.py  main.py
src/example-learning_agent/: .env
src/learning_agent/: .env.example  agent.py
src/learning_platform/: agent.py  main.py
src/static/: index.html
src/templates/: chat.html  code.html  dashboard.html  profile.html  quiz.html  quiz_results.html  resources.html  roadmap.html
tests/: conftest.py  test_agent.py  test_agent_engine_app.py  test_app.py  test_chat_api_stream.py  test_chat_stream.py  test_main.py
(+5 files in other folders)
