[project]
name = "curriculum-builder"
version = "0.0.1"
description = "AI-powered personalized learning platform using Google ADK"
requires-python = ">=3.11, <3.14"
dependencies = [
    "google-adk==1.27.1",
    "google-cloud-aiplatform[adk,agent_engines]",
]

classifiers = [
    "Private :: Do Not Upload",
]
